[package]
name = "ybm"
version = "0.1.0"
edition = "2021"
description = "YekBarMasraf"

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
anyhow = "1.0.75"
thiserror = "1.0.49"
dirs = "5.0.1"
serde = {version = "1.0.189", features = ["derive"]}
toml = "0.8.2"
toml_edit = {version = "0.22.9", features = ["serde"]}
base32 = "0.4.0"
ratatui = "0.26.1"
crossterm = {version = "0.27.0", features = ["serde"]}
totp-lite = "2.0.0"
chrono = {version = "0.4.31", default-features = false, features = ["clock"]}